fixing spacing

--- a/_css/_reset.scss
+++ b/_css/_reset.scss
@@ -14,8 +14,8 @@ time, mark, audio, video {
   border: 0;
   font: "Open Sans";
   font-size: 100%;
-  margin: 0;
-  padding: 0;
+  margin-bottom: 0px
+  padding: 0px 0px 0px 0px;
   vertical-align: baseline;
 }
 
